--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
               with:
                   deno-version: v1.x
 
+            - run: deno upgrade rc
+
             - run: npm install
             - run: deno task bundle-web
 
