docs: update @knorpelsenf as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -32,7 +32,8 @@
         "projectManagement",
         "infra",
         "audio",
-        "a11y"
+        "a11y",
+        "talk"
       ]
     },
     {
