--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
 
             # Setup deno so we can bundle for the web
 
-            - uses: denoland/setup-deno@main
+            - uses: denoland/setup-deno@2
               with:
                   deno-version: v2.x
 
