--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@2
+      - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x
 
@@ -54,7 +54,7 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@2
+      - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x
 
@@ -72,7 +72,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: denoland/setup-deno@2
+      - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x
 
