chore: Rename `Andrey Zontov` to `Andrii Zontov`

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1024,9 +1024,9 @@
     },
     {
       "login": "LWJerri",
-      "name": "Andrey Zontov",
+      "name": "Andrii Zontov",
       "avatar_url": "https://avatars.githubusercontent.com/u/50290430?v=4",
-      "profile": "https://lwjerri.dev/",
+      "profile": "https://lwjerri.dev",
       "contributions": [
         "bug",
         "code",
