--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1504,6 +1504,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Hth4nh",
+      "name": "Thành Hoàng Trần",
+      "avatar_url": "https://avatars.githubusercontent.com/u/63627651?v=4",
+      "profile": "https://github.com/Hth4nh",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
