build: drop Node for now
We will delegate building to JSR before the 2.0 release.

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,1 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Dependency directories
-node_modules/
-
-# lock files will not be published, so no need to store it
-package-lock.json
-
-# Output of 'npm pack'
-*.tgz
-
-# Test coverage
-test/coverage
-test/cov_profile
-coverage.lcov
-
-# Build output
-deno_cache/
-out/
+/test/coverage
