--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,24 +1,12 @@
 {
     "lock": false,
-    "nodeModulesDir": "none",
     "tasks": {
-        "check": "deno cache --check=all --allow-import src/mod.ts",
-        "backport": "deno run --no-prompt --allow-read=. --allow-write=. https://deno.land/x/deno2node@v1.13.0/src/cli.ts tsconfig.json",
-        "test": "deno test --seed=123456 --parallel --allow-import ./test/",
-        "dev": "deno fmt && deno lint && deno task test && deno task check",
-        "coverage": "rm -rf ./test/cov_profile && deno task test --coverage=./test/cov_profile && deno coverage --lcov --output=./coverage.lcov ./test/cov_profile",
-        "report": "genhtml ./coverage.lcov --output-directory ./test/coverage/ && echo 'Point your browser to test/coverage/index.html to see the test coverage report.'",
-        "bundle-web": "mkdir -p out deno_cache && cd bundling && DENO_DIR=$PWD/../deno_cache deno run --unstable --quiet --allow-net --allow-read --allow-env=DENO_DIR,XDG_CACHE_HOME,HOME,DENO_AUTH_TOKENS --allow-write=../out,$PWD/../deno_cache bundle-web.ts dev ../src/mod.ts",
+        "check": "deno check --all src/mod.ts",
+        "test": "deno test --seed=123456 -I test/",
+        "ok": "deno fmt && deno lint && deno task test && deno task check",
+        // TODO: bring back coverage reports
         "contribs": "deno run --allow-env --allow-read --allow-write=. --allow-net=api.github.com --allow-sys npm:all-contributors-cli"
     },
-    "exclude": [
-        "./bundling/bundles",
-        "./deno_cache/",
-        "./node_modules/",
-        "./out/",
-        "./package-lock.json",
-        "./test/cov_profile"
-    ],
     "fmt": {
         "indentWidth": 4,
         "proseWrap": "preserve"
