chore: update CI scripts

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -15,18 +15,6 @@ on:
         branches: [main]
 
 jobs:
-    backport:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Setup repo
-              uses: actions/checkout@v4
-
-            - name: Install dependencies
-              run: npm install --ignore-scripts
-
-            - name: Run backporting
-              run: npm run backport
-
     format-and-lint:
         runs-on: ubuntu-latest
         steps:
@@ -58,28 +46,8 @@ jobs:
               with:
                   deno-version: v2.x
 
-            - name: Cache Dependencies
+            - name: Type-check
               run: deno task check
 
             - name: Run Tests
               run: deno task test
-
-    coverage:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Setup repo
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-
-            - uses: denoland/setup-deno@v2
-              with:
-                  deno-version: v2.x
-
-            - name: Create coverage files
-              run: deno task coverage
-
-            - name: Collect coverage
-              uses: codecov/codecov-action@v1.0.10 # upload the report on Codecov
-              with:
-                  file: ./coverage.lcov
