chore: simplify VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,3 @@
 {
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-        "source.fixAll": "explicit"
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "denoland.vscode-deno"
-    },
-    "[markdown]": {
-        "editor.defaultFormatter": "denoland.vscode-deno"
-    },
-    "[json]": {
-        "editor.defaultFormatter": "denoland.vscode-deno"
-    },
-    "[jsonc]": {
-        "editor.defaultFormatter": "denoland.vscode-deno"
-    }
+    "editor.formatOnSave": true
 }
