docs: add @ikelax as a contributor for doc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1513,6 +1513,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "ikelax",
+      "name": "ikelax",
+      "avatar_url": "https://avatars.githubusercontent.com/u/163678144?v=4",
+      "profile": "https://github.com/ikelax",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
