chore: rework deno tasks

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,7 +6,8 @@
     "tasks": {
         "check": "deno check --all src/mod.ts",
         "test": "deno test --seed=123456 test/",
-        "ok": "deno fmt && deno lint && deno task test && deno task check",
+        "ok": "deno fmt --check && deno lint && deno task test && deno task check",
+        "fix": "deno fmt && deno lint --fix",
         // TODO: bring back coverage reports
         "contribs": "deno run --allow-env --allow-read --allow-write=. --allow-net=api.github.com --allow-sys npm:all-contributors-cli"
     },
