chore: disable slow type linting

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -14,5 +14,12 @@
     "fmt": {
         "indentWidth": 4,
         "proseWrap": "preserve"
+    },
+    "lint": {
+        "rules": {
+            "exclude": [
+                "no-slow-types"
+            ]
+        }
     }
 }
