docs: add @eddienubes as a contributor for doc
https://github.com/grammyjs/conversations/pull/136

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1562,6 +1562,15 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "eddienubes",
+      "name": "Dmytro Tiapukhin",
+      "avatar_url": "https://avatars.githubusercontent.com/u/53977359?v=4",
+      "profile": "https://github.com/eddienubes",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
