docs: add @OfficialCodinary as a contributor for review
https://github.com/grammyjs/conversations/pull/134

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1583,6 +1583,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "OfficialCodinary",
+      "name": "Codinary",
+      "avatar_url": "https://avatars.githubusercontent.com/u/133005277?v=4",
+      "profile": "https://github.com/OfficialCodinary",
+      "contributions": [
+        "review"
+      ]
     }
   ]
 }
