chore: temporarily skip checking remote modules

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,7 @@
     "lock": false,
     "nodeModulesDir": "none",
     "tasks": {
-        "check": "deno cache --check=all --allow-import src/mod.ts",
+        "check": "deno cache --allow-import src/mod.ts",
         "backport": "deno --no-prompt --allow-read=. --allow-write=. https://deno.land/x/deno2node@v1.13.0/src/cli.ts tsconfig.json",
         "test": "deno test --seed=123456 --parallel --allow-import ./test/",
         "dev": "deno fmt && deno lint && deno task test && deno task check",
