--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1556,7 +1556,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/123096124?v=4",
       "profile": "https://github.com/rtyt3000",
       "contributions": [
-        "bug"
+        "bug",
+        "doc"
       ]
     },
     {
