--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,11 @@ jobs:
     build:
         if: github.event.base_ref == 'refs/heads/main'
         runs-on: ubuntu-latest
+
+        permissions:
+            contents: write # For creating the Release
+            id-token: write # For npm OIDC authentication
+
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -23,11 +28,7 @@ jobs:
             - run: deno task bundle-web
 
             - name: Publish to npm
-              run: |
-                  npm config set //registry.npmjs.org/:_authToken '${NPM_TOKEN}'
-                  npm publish --ignore-scripts
-              env:
-                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+              run: npm publish --provenance --ignore-scripts
 
             - name: Release
               uses: softprops/action-gh-release@v1
