chore: attempt to fix OIDC publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,11 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 24
+                  registry-url: https://registry.npmjs.org/
+
             # Setup deno so we can bundle for the web
 
             - uses: denoland/setup-deno@v2
