--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,11 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will install Deno and run tests across stable and nightly builds on Windows, Ubuntu and macOS.
-# For more information see: https://github.com/denolib/setup-deno
-
 name: grammY
 
 on:
@@ -15,39 +7,14 @@ on:
         branches: [main, v2]
 
 jobs:
-    format-and-lint:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Setup repo
-              uses: actions/checkout@v4
-
-            - uses: denoland/setup-deno@v2
-              with:
-                  deno-version: v2.5.x
-
-            - name: Check Format
-              run: deno fmt --check
-
-            - name: Lint
-              run: deno lint
-
-    test:
+    ok:
         runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
-
         strategy:
             matrix:
                 os: [macOS-latest, windows-latest, ubuntu-latest]
-
         steps:
-            - name: Setup repo
-              uses: actions/checkout@v4
-
+            - uses: actions/checkout@v4
             - uses: denoland/setup-deno@v2
               with:
                   deno-version: v2.5.x
-
-            - name: Type-check
-              run: deno task check
-
-            - name: Run Tests
-              run: deno task test
+            - run: deno task ok
