--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -7,7 +7,18 @@ on:
         branches: [main, v2]
 
 jobs:
-    ok:
+    format-lint-typecheck:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: denoland/setup-deno@v2
+              with:
+                  deno-version: v2.5.x
+                  cache: true
+            - run: deno fmt --check
+            - run: deno lint
+            - run: deno check
+    test:
         runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
         strategy:
             matrix:
@@ -18,4 +29,4 @@ jobs:
               with:
                   deno-version: v2.5.x
                   cache: true
-            - run: deno task ok
+            - run: deno task test
