--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -17,7 +17,7 @@ jobs:
                   cache: true
             - run: deno fmt --check
             - run: deno lint
-            - run: deno check
+            - run: deno task check
     test:
         runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
         strategy:
