--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,4 +1,4 @@
-name: grammY
+name: Check
 
 on:
     push:
@@ -10,23 +10,24 @@ jobs:
     format-lint-typecheck:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
             - uses: denoland/setup-deno@v2
               with:
                   deno-version: v2.5.x
                   cache: true
+            - uses: actions/checkout@v5
             - run: deno fmt --check
             - run: deno lint
             - run: deno task check
+            - run: deno publish --dry-run
     test:
         runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
         strategy:
             matrix:
                 os: [macOS-latest, windows-latest, ubuntu-latest]
         steps:
-            - uses: actions/checkout@v4
             - uses: denoland/setup-deno@v2
               with:
                   deno-version: v2.5.x
                   cache: true
+            - uses: actions/checkout@v5
             - run: deno task test
